--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.2",
   "dependencies": {
     "accel-mma84": "^0.2.3",
-    "servo-pca9685": "^0.1.3",
+    "servo-pca9685": "^0.1.3"
   }
 }
